# voicetypr

./: .env.example  AGENTS.md  CHANGELOG.md
.github/patches/: glitchtip-cli-1.0.0-chunk-upload.patch
.github/scripts/: install-glitchtip-cli.mjs  should-update-beta-manifest.mjs  should-update-beta-manifest.node-test.mjs
.github/workflows/: ci.yml  release.yml  update-beta-channel.yml
docs/plans/: 2026-04-27-002-feat-report-bug-with-logs-plan.md  2026-04-28-001-direct-bug-crash-submit-plan.md
plans/: 030-windows-crash-dependencies.md  031-glitchtip-observability.md  README.md  SMOKE.md
sidecar/whisper-vulkan/: Cargo.toml
sidecar/whisper-vulkan/src/: main.rs
src/: types.ts
src-tauri/: Cargo.toml
src-tauri/crates/transcript-text/: Cargo.toml
src-tauri/crates/vulkan-device-select/: Cargo.toml
src-tauri/src/: lib.rs  telemetry.rs
src-tauri/src/ai/: anthropic.rs
src-tauri/src/audio/: mod.rs  normalizer.rs  normalizer_tests.rs  recorder.rs  resampler.rs  silence_detector.rs  speech_evidence.rs
src-tauri/src/commands/: ai.rs  audio.rs  audio_feedback.rs  logs.rs  mod.rs  settings.rs  text.rs  updater.rs
src-tauri/src/media/: controller.rs
src-tauri/src/tests/: log_commands_tests.rs  logging_performance_tests.rs  mod.rs  panic_prevention_tests.rs  (+1 more)
src/components/: AppContainer.test.tsx  AppContainer.tsx  CrashReportDialog.test.tsx  CrashReportDialog.tsx  ReportBugDialog.test.tsx  ReportBugDialog.tsx  Sidebar.tsx
src/services/: updateService.test.ts  updateService.ts
src/test/: setup.ts
src/utils/: crashReport.test.ts  crashReport.ts
(+14 files in other folders)
